--- a/app/views/carts/_cart.html.erb
+++ b/app/views/carts/_cart.html.erb
@@ -10,5 +10,5 @@
 
 </table>
 
-<%= button_to 'Empty cart', cart, method: :delete,
+<%= button_to 'Empty cart', cart, method: :delete, remote: true,
     data: { confirm: 'Are you sure?' } %>
