--- a/app/views/carts/_cart.html.erb
+++ b/app/views/carts/_cart.html.erb
@@ -10,5 +10,8 @@
 
 </table>
 
+<% unless current_page?(:controller => 'orders', :action => 'new') %>
+  <%= button_to 'Checkout', new_order_path, method: :get %>
+<% end %>
 <%= button_to 'Empty cart', cart, method: :delete, remote: true,
     data: { confirm: 'Are you sure?' } %>
