--- a/app/views/order_notifier/shipped.text.erb
+++ b/app/views/order_notifier/shipped.text.erb
@@ -1,3 +1,5 @@
-OrderNotifier#shipped
+Dear <%= @order.name %>
 
-<%= @greeting %>, find me in app/views/order_notifier/shipped.text.erb
+This is just to let you know that we've shipped your recent order:
+
+<%= render @order.line_items -%>
